# transport_robot_project

./: .gitignore  Code_modify.md  ORIN_SET_GUIDE.md
orin_ws/: ORIN_DEBUG_HANDOFF.md  README.txt  build.sh  cli.sh  cmd_vel.md  deploy.sh  run.sh
orin_ws/rosbag2_2026_06_12-10_39_34/: metadata.yaml  rosbag2_2026_06_12-10_39_34_0.db3
orin_ws/src/carrier_teleop/: package.xml  setup.cfg  setup.py
orin_ws/src/carrier_teleop/carrier_teleop/: keyboard_teleop.py
orin_ws/src/mgs01_base_msgs/: CMakeLists.txt  package.xml
orin_ws/src/mgs01_base_msgs/srv/: CommandSet.srv
orin_ws/src/orin_firmware_bridge/: CMakeLists.txt  package.xml
orin_ws/src/orin_firmware_bridge/include/orin_firmware_bridge/: rd_bridge.hpp  rd_comm.hpp  rd_command.hpp  rd_common.hpp  rd_logger.hpp  rd_map.hpp  rd_register_dpc.hpp  rd_register_ecu.hpp  rd_register_pcu.hpp  rd_schedule.hpp  rd_uart.hpp
orin_ws/src/orin_firmware_bridge/src/: command_cli.cpp  main.cpp  rd_bridge.cpp  rd_comm.cpp  rd_command.cpp  rd_logger.cpp  rd_map.cpp  rd_schedule.cpp  rd_uart.cpp
stm_ws/DPC_B/: .cproject  .project  DPC_B Debug.launch  DPC_B.ioc
stm_ws/DPC_B/Core/Inc/: DYN_xm430_w350.h  MCP23017.h  main.h  rd_comm_dpcb.h  rd_comm_dyn.h  rd_common.h  rd_control.h  rd_define.h  rd_map_dyn.h  rd_peripheral.h  rd_peripheral_dpcb.h  rd_uart.h  stm32f4xx_it.h
stm_ws/DPC_B/Core/Src/: MCP23017.c  main.c  rd_comm_dpcb.c  rd_comm_dyn.c  rd_control.c  rd_map_dyn.c  rd_peripheral_dpcb.c  rd_uart.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
stm_ws/DPC_B/Debug/: makefile
stm_ws/DPC_B/Debug/Core/Src/: MCP23017.cyclo  main.cyclo  rd_comm_dpcb.cyclo  rd_comm_dyn.cyclo  rd_control.cyclo  rd_map_dyn.cyclo  rd_peripheral_dpcb.cyclo  rd_uart.cyclo  stm32f4xx_hal_msp.cyclo  stm32f4xx_it.cyclo  subdir.mk
stm_ws/ECU_V3/: .cproject  .mxproject  .project  CLAUDE.md  ECU_V3.ioc  ECU_V3.launch
stm_ws/ECU_V3/Core/Inc/: FreeRTOSConfig.h  can_ak.h  i2c_as5600.h  main.h  rd_can_motor.h  rd_comm_ecu.h  rd_comm_imu.h  rd_comm_receive.h  rd_control.h  rd_define.h  rd_i2c_encoder.h  rd_map_ecu.h  rd_peripheral.h  rd_peripheral_ecu.h  rd_register_ecu.h  rd_system.h  rd_uart.h  stm32f4xx_it.h
stm_ws/ECU_V3/Core/Src/: can_ak.c  i2c_as5600.c  main.c  memo.c  rd_can_motor.c  rd_comm_ecu.c  rd_comm_imu.c  rd_comm_receive.c  rd_control.c  rd_i2c_encoder.c  rd_map_ecu.c  rd_peripheral_ecu.c  rd_system.c  rd_uart.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
