<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carrier_teleop</name>
  <version>0.0.0</version>
  <description>키보드 멀티키 teleop (가상 조이스틱). WASD 동시입력 + Ctrl 부스트 + Space 정지 + j(/jeongae 1초 펄스)를 /carrier_cmd_vel 로 발행한다.</description>
  <maintainer email="rudxo970@gmail.com">swarm</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mgs01_base_msgs</exec_depend>
  <!-- pygame 은 rosdep 키가 불안정하여 수동 설치: sudo apt install python3-pygame -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
